# haskell-riscv-emulator

./: CHANGELOG.md  LICENSE  README.md  haskell-riscv-emulator.cabal
app/: Emulator.hs  Instructions.hs  Main.hs  Registers.hs  Types.hs
app/Disassembler/: Disassembler.hs  Instructions.hs  Registers.hs
app/Elf/: Elf.hs  Header.hs  Sections.hs  Types.hs  Utils.hs
app/Emulator/: Emulator.hs  State.hs  Syscalls.hs
