cabal-version:      3.0
name:               haskell-riscv-emulator

version:            0.1.0.0

license:            MIT

license-file:       LICENSE

author:             dvir

maintainer:         dvir@rassovsky.com

build-type:         Simple

extra-doc-files:    CHANGELOG.md


common warnings
    ghc-options: -Wall

executable haskell-riscv-emulator
    import:           warnings

    main-is:          Main.hs
    other-modules:    Disassembler.Disassembler
                    , Disassembler.Instructions
                    , Disassembler.Registers
                    , Elf.Elf
                    , Elf.Header
                    , Elf.Sections
                    , Elf.Types
                    , Elf.Utils
                    , Emulator.Emulator
                    , Emulator.State
                    , Emulator.Syscalls
                    , Instructions
                    , Registers
                    , Types

    build-depends:    base ^>=4.16.4.0
                    , bv-sized ==1.0.5
                    , text ==2.0.2
                    , bytestring ==0.11.4.0
                    , binary ==0.8.9.1
                    , lens ==5.2.3
                    , parameterized-utils ==2.1.7.0
                    , containers ==0.6.5.1
                    , extra ==1.7.14
                    , monad-loops ==0.4.3
                    , unix ==2.8.1.1

    hs-source-dirs:   app

    default-language: Haskell2010
    default-extensions: BinaryLiterals
                      , DataKinds
                      , KindSignatures
                      , RankNTypes
                      , TypeApplications
                      , OverloadedStrings
                      , GADTs
                      , LambdaCase
